centering issue on mobile fixed

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -12,9 +12,9 @@ main
   width: 80%
   margin: 0 auto
 
-section 
+section
   background-color: #ddd
-  padding: 20px
+  padding: 20px 0
   width: 100%
 
 h1, p, a
@@ -63,7 +63,7 @@ section
     margin-bottom: 20px
   p
     color: #333
-    width: 60%
+    width: 70%
     margin: 0 auto
 
 input[type=email]
